--- a/tracker/index.html
+++ b/tracker/index.html
@@ -8,7 +8,7 @@
     <title>TRACKER</title>
     <style>* {box-sizing: border-box;margin:0;padding:0}</style>
 </head>
-<body style="background:blueviolet;height:300vh">
+<body style="background:rgb(176, 253, 221);height:300vh">
     <div style="height:200px;width:200px;background:yellow"></div>
     <div style="height:200px;width:200px;background:blue"></div>
     <div style="height:200px;width:200px;background:yellow"></div>
